mindfulNarwhal/force-app/main/default/objects/Country__c/fields/Alpha2_Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2_Code__c</fullName>
    <label>Alpha2 Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>