mindfulNarwhal/force-app/main/default/objects/Country__c/fields/Alpha3_Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3_Code__c</fullName>
    <label>Alpha3 Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>