mindfulNarwhal/force-app/main/default/objects/Country__c/fields/Regional_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Regional_Blocks__c</fullName>
    <label>Regional Blocks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>